--- a/Pivo/src/Main/Main.css
+++ b/Pivo/src/Main/Main.css
@@ -436,8 +436,16 @@
 .loader {
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
+    min-height: 240px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    width: 100%;
+    text-align: center;
 }
 
 .loader_icon {
-    margin-left: 4vw;
+    margin-left: 0;
 }
